# picard

./: .bzrignore  .bzrtags  .codacy.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .isort.cfg  .mailmap  .markdownlint.json  .pre-commit-config.yaml  .project  .prospector.yml  .pylintrc  .remarkrc  .travis.yml  AGENTS.md  AUTHORS.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HACKING.txt  INSTALL  INSTALL.md  INSTALL.txt  MANIFEST.in  NEWS.md  NEWS.txt  OBSOLETE_CODE.md  PLUGINS.md  PLUGINS_ROADMAP.md  README.branch  README.md  RELEASING.md  Setting Up Picard.txt  TaskbarLib.idl  TranslationUI.md  addrelease.py  appveyor.yml  appxmanifest.xml.in  check_settings.py  (+29 more)
.circleci/: config.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: check-settings-keys.yml  codacy-analysis.yml  codeql-analysis.yml  github-release.yml  lint.yml  package-macos.yml  package-pypi.yml  package-windows.yml  package.yml  pypi-release.yml  ruff.yml  run-tests.yml  validate-appstream.yml  validate-xdg-metadata.yml
.tx/: config
PLUGINSV3/: CLI.md  DECISIONS.md  GUI.md  MANIFEST.md  MIGRATION.md  README.md  REGISTRY.md  ROADMAP.md  TRANSLATIONS.md  WEBSITE.md
contrib/plugins/: addrelease.py  albumartist_website.py  classicdiscnumber.py  coverart.py  cuesheet.py  discnumber.py  featartist.py  featartistsintitles.py  file_move.py  firstalphachar.py  fix_mp4_meta.py  initials.py  lastfm.py  matchedtracks.py  musicians_sorted.py  no_release.py  open_in_gui.py  originalreleasedate.py  release_type.py  reorder_sides.py  replaygain.py  sort_multivalue_tags.py  standardise_performers.py  swapprefix.py  title_case_nx.py  titlecase.py  tracks2clipboard.py
data/: compile.py  picard.qrc
data/images/: analyze.psd  remove.psd
docs/: .gitignore  ISRCSupport.md  Makefile  Plugin2to3MigrationGuide.md  ShareableProfiles.md  UnifiedConfigUpgrades.md  basics.rst  build-osx.rst  build-windows.rst  conf.py  default.css  development.rst  dnd.txt  faq.rst  guide.rst  index.rst  linux.rst  make.bat  mappings.html  mappings.rst  options.rst  plugin-api.rst  scripting.rst  tags.rst  tags.txt  todo.txt  troubleshooting.rst
docs/PLUGINSV3/: API.md  CLI.md  DECISIONS.md  GIT_REFS_FEATURE.md  GUI.md  LOCAL_NON_GIT.md  MANIFEST.md  MIGRATION.md  MONOREPO.md  README.md  REGISTRY.md  ROADMAP.md  SECURITY.md  STATUS.md  TRANSLATIONS.md  TRANSLATIONS_IMPL.md  WEBSITE.md
docs/_static/: my.css
docs/_templates/: layout.html
installer/: picard-setup.nsi.in  removeSettings.ini
installer/i18n/: json2nsh.py  nsh2json.py  nshutil.py
installer/languages/: Dutch.nsh  English.nsh  French.nsh  (+4 more)
picard/: __init__.py  acoustid.py  acoustidmanager.py  album.py  album_requests.py  albummanager.py  api.py  artist.py  attributes.py  audit.py  cluster.py  collection.py  compat.py  component.py  config.py  config_upgrade.py  config_upgrade_hooks.py  const.py  countries.py  coverart.py  coverartarchive.py  coverartimage.py  dataobj.py  debug_opts.py  disc.py  enhanced_errors.py  file.py  file_dilaog.py  i18n.py  isrcsubmit.py  item.py  log.py  match_details_log.py  matching.py  mbjson.py  mbxml.py  medium.py  metadata.py  move_conflict.py  oauth.py  (+31 more)
plugins/: addrelease.py  amazon.py  coverart.py  cuesheet.py  discnumber.py  featartist.py  initials.py
po/: README.md  af.po  ar.po  ast.po  bg.po  ca.po  compile.py  cs.po  cy.po  da.po  de.po  de_CH.po  el.po  en.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_419.po  et.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  fy.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kn.po  ko.po  lt.po  mr.po  (+30 more)
resources/: README.md  __init__.py  build-macos-icon  compile.py  makeqrc.py  picard.qrc
scripts/: country_sql2py.py  do_release.sh  extract_plugin_translations.py  fix_header.py  migrate-plugin.py  migrate_plugin.py  package-osx.md  package-osx.sh  package-win.bat  picard  picard-portable-hook.py  picard-winconsole-hook.py  picard.in  picard.py2exe.in  plugin_compile_ui.py  precommit-flake8.sh  run-sdist-test.sh  setup-osx.sh  test_plugin_commands.sh  test_plugin_commands_local.sh  test_plugin_commands_no_registry.sh  test_plugin_redirects.sh  upload.sh  win-update-python.ps1
test/: __init__.py  conftest.py  picardtestcase.py  test_acousticbrainz.py  test_acoustid.py  test_acoustidmanager.py  test_album.py  test_album_loading_sorting.py  test_amazon_urls.py  test_api_helpers.py  test_asf.py  test_audit.py  test_browser.py  test_browser_addrelease.py  test_bytes2human.py  test_canonicalize_path.py  test_clusterdict.py  test_clusterengine.py  test_clustering.py  test_collection.py  test_compatid3.py  test_config.py  test_config_upgrade.py  test_config_upgrade_hooks.py  test_configurable_columns_header_sync.py  test_const_appdirs.py  test_coverart_details_option.py  test_coverart_image.py  test_coverart_processing.py  test_coverart_setter.py  test_coverart_utils.py  test_coverartbox_info.py  test_coverartprovider_caa.py  test_coverartsetter.py  test_custom_columns.py  test_custom_columns_context.py  test_custom_columns_hidden_tag_normalization.py  test_custom_columns_manager_dialog.py  test_custom_columns_manager_dialog_decoupling.py  test_custom_columns_manager_dialog_refactor.py  (+173 more)
ui/: README.txt  aboutdialog.ui  advtageditor.ui  cdlookup.ui  compile.py  edittagdialog.ui  exception_script_selector.ui  filedialog.ui  infodialog.ui  infostatus.ui  metadata.ui  multi_locale_selector.ui  nagdialog.ui  options.ui  options_about.ui  options_acousticbrainz.ui  options_advanced.ui  options_advanced_sessions.ui  options_attached_profiles.ui  options_cdlookup.ui  options_cdlookup_win32.ui  options_colors.ui  options_cover.ui  options_cover_processing.ui  options_coverartproviders.ui  options_fingerprinting.ui  options_folksonomy.ui  options_general.ui  options_genres.ui  options_interface.ui  options_interface_colors.ui  options_interface_cover_art_box.ui  options_interface_quick_menu.ui  options_interface_toolbar.ui  options_interface_top_tags.ui  options_maintenance.ui  options_matching.ui  options_metadata.ui  options_moving.ui  options_naming.ui  (+39 more)
(+1379 files in other folders)
